--- a/main.css
+++ b/main.css
@@ -1,25 +1,37 @@
-*{
+* {
   margin: 0;
   padding: 0;
-}
-body {
-  margin: 0;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  font-size: 17px;
-  color: darkslategray;
-  line-height: 1.6;
+  --primamry-gap: 5vh;
+  --secondary-gap: 3vh;
+  --text-padding: 0 3vw;
 }
 
-#showcase{
+body {
   background-image: url(images/background_aircraftparts.jpg);
-  background-size: cover;
-  height: 100vh;
   display: flex;
   flex-direction:  column;
-  justify-content: center;
   align-items: center;
   text-align: center;
-  padding: 0 20px;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: max(3vmin, 17px);
+  gap: var(--primamry-gap);
+}
+
+h1 {
+  padding: var(--text-padding);
+}
+
+p {
+  line-height: 1.5;
+  padding: var(--text-padding);
+}
+
+#showcase {
+  display: flex;
+  flex-direction:  column;
+  align-items: center;
+  text-align: center;
+  gap: var(--secondary-gap);
 }
 
 #showcase #logo{
@@ -27,31 +39,40 @@ height: 50vw;
 max-height: 300px;
 }
 
-#showcase h1 {
-  font-size: 50px;
-  line-height: 1.2;
-}
-
-#showcase p {
-  margin: 20px;
-}
-
-#showcase .button {
-  font-size: 18px;
+ .button {
   text-decoration: none;
   color: darkslategray;
   border: darkslategray 2px solid;
-  padding: 5px 10px;
-  border-radius: 10px;
-  margin: 10px ;
+  padding: 10px 20px;
+  border-radius: 15px;
 }
 
-#showcase .button:hover {
-  background: darkslategray;
+.button:hover {
+  background:darkslategray;
   color: white;
 }
 
-#section-a {
-  padding: 10px 20px;
+section {
+  display: flex;
+  flex-direction:  column;
+  align-items: center;
   text-align: center;
+  background-color: teal;
+  color: white;
+  width: 100vw;
+  padding: 10vmin 0;
+  gap: var(--secondary-gap);
+}
+
+section .button {
+  text-decoration: none;
+  color: white;
+  border: white 2px solid;
+  padding: 10px 20px;
+  border-radius: 15px;
+}
+
+section .button:hover {
+  background:white;
+  color: teal;
 }
