Added some minor changes

--- a/index.css
+++ b/index.css
@@ -39,58 +39,75 @@ p {
 
 nav {
   margin: 0;
-  position: absolute;
+  position: fixed;
   left: 20px;
   top: 20px;
 }
 
-#burger {
-  font-size: 40px;
-  height: 60px;
-  width: 60px;
+.nav_btn {
+  font-size: 60px;
+  padding-bottom: 7px;
+  padding-left: 1px;
+  height: 80px;
+  width: 80px;
   cursor: pointer;
-  display: block;
   background: none;
   border: none;
-  border-radius: 60px;
+  border-radius: 80px;
+}
+
+.nav_btn:hover {
+  background-color: rgba(128, 128, 128, 0.1);
+}
+
+.nav_btn:active {
+  color: teal;
+}
+
+#burger {
+  display: block;
 }
 
 #close_btn {
-  font-size: 40px;
-  height: 60px;
-  width: 60px;
-  cursor: pointer;
   display: none;
-  background: none;
-  border-radius: 60px;
-  border: none;
 }
 
 nav #pages {
-  top: 50px;
-  margin-top: 1vh;
+  top: 100px;
   list-style: none;
   display: none;
   position: absolute;
   flex-direction: column;
   font-weight: bold;
-
 }
 
 nav #pages li {
   margin: 1vh 0px;
   padding: 10px 20px;
-  border: darkslategray 1px solid;
+  border: darkslategray 2px dotted;
   border-radius: 15px;
   width: max-content;
-  background-color: white;
-  font-size: max(3vmin, 17px);
+  background-color: rgba(255, 255, 255, 0.9);
+  font-size: max(4vmin, 20px);
+  color: darkslategray
+}
+
+nav #pages li:hover {
+  color: white;
+  background-color: darkslategray;
+  border: darkslategray 2px solid;
+}
+
+nav #pages li:active {
+  color: white;
+  background-color: teal;
+  border: teal 2px solid;
 }
 
 nav #pages a {
   font-size: inherit;
   text-decoration: none;
-  color: darkslategray;
+  color: inherit;
 }
 
 
@@ -117,6 +134,11 @@ max-height: 300px;
 #showcase .button:hover {
   background-color: darkslategray;
   color: white;
+}
+
+#showcase .button:active {
+  background-color: teal;
+  border: teal 1px solid;
 }
 
 @media only screen and (min-width: 600px) {
@@ -156,6 +178,12 @@ section {
   color: teal;
 }
 
+#section_a .button:active {
+  color: darkslategray;
+  border: white 1px solid;
+  background:white;
+}
+
 #section_b {
   background-color: darkslategray;
   color: white;
@@ -171,6 +199,13 @@ section {
   color: darkslategray;
 }
 
+#section_b .button:active {
+  color: teal;
+  border: white 1px solid;
+  background:white;
+}
+
+
 #section_about .button {
   color: darkslategray;
   border: darkslategray 1px solid;
@@ -178,5 +213,11 @@ section {
 
 #section_about .button:hover {
   background-color: darkslategray;
+  color: white;
+}
+
+#section_about .button:active {
+  background-color: teal;
+  border: teal 1px solid;
   color: white;
 }
