--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 /* Manavjot Singh [07/05/2021] */
+
 * {
   margin: 0;
   padding: 0;
@@ -39,7 +40,7 @@ p {
 
 nav {
   margin: 0;
-  position: fixed;
+  position: absolute;
   left: 20px;
   top: 20px;
 }
