--- a/index.css
+++ b/index.css
@@ -13,9 +13,8 @@
 body {
   background-image: url(images/background_aircraftparts.jpg);
   display: flex;
-  flex-direction:  column;
+  flex-direction: column;
   align-items: center;
-  text-align: center;
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   font-size: max(3vmin, 17px);
   gap: var(--primary-gap);
@@ -32,7 +31,7 @@ p {
 
 .button {
   text-decoration: none;
-  border: 1px solid;
+  border: 1px darkslategray solid;
   padding: 10px 20px;
   border-radius: 15px;
   margin: 10px 20px;
@@ -131,7 +130,6 @@ section {
   border: white 1px solid;
   background:white;
 }
-
 
 #section_about .button {
   color: darkslategray;
