--- a/index.css
+++ b/index.css
@@ -13,8 +13,9 @@
 body {
   background-image: url(images/background_aircraftparts.jpg);
   display: flex;
-  flex-direction: column;
+  flex-direction:  column;
   align-items: center;
+  text-align: center;
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   font-size: max(3vmin, 17px);
   gap: var(--primary-gap);
@@ -31,9 +32,9 @@ p {
 
 .button {
   text-decoration: none;
-  border: 1px darkslategray solid;
+  border: 1px solid;
   padding: 10px 20px;
-  border-radius: 15px;
+  border-radius: 40px;
   margin: 10px 20px;
 }
 
@@ -71,7 +72,7 @@ max-height: 300px;
   .info {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
   }
 
   section {
@@ -130,6 +131,7 @@ section {
   border: white 1px solid;
   background:white;
 }
+
 
 #section_about .button {
   color: darkslategray;
