--- a/nav.css
+++ b/nav.css
@@ -2,6 +2,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    --primary-gap: 0vh;
+    --secondary-gap: 3vh;
+    --text-padding: 0 3vw;
+    --element-padding: 5vh 0;
 }
 
 nav {
@@ -50,7 +54,7 @@ nav #pages {
 
 nav #pages li {
     margin: 1vh 0px;
-    padding: 10px 20px;
+    padding: 10px 0px;
     border: darkslategray 2px dotted;
     border-radius: 15px;
     width: max-content;
@@ -72,6 +76,8 @@ nav #pages li:active {
 }
 
 nav #pages a {
+    padding: 10px 10px;
+    border-radius: 15px;
     font-size: inherit;
     text-decoration: none;
     color: inherit;
@@ -81,4 +87,5 @@ nav #pages #current_page{
     color: white;
     background-color: teal;
     border: teal 2px solid;
+    
 }
